feat: for geo/uniteUrbaine2020/{code}/descendants
